adjusted margins to avoid scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@ body {
   flex-direction: row;
   color: rgb(70, 53, 37);
   margin-top: 2rem;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   padding: 5px;
   background-color: rgba(230, 230, 230, 0.5);
   border-radius: 10px;
@@ -98,8 +98,8 @@ body {
   justify-content: space-around;
   align-items: center;
   width: 70%;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   color: beige;
 }
 
